<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FF222B7C" >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp">

        <TextView
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:id="@+id/textViewNome"
            android:textColor="#faf7f7"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroNome"
            android:visibility="invisible"
            android:textColor="#FF0000"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10"
            android:id="@+id/editTextNome"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:background="#ffffff"
            android:textSize="20sp"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idade"
            android:textColor="#faf7f7"
            android:textSize="25sp"
            android:id="@+id/textViewIdade"
            android:layout_weight="0.21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroIdade"
            android:visibility="invisible"
            android:textColor="#FF0000"
            android:layout_weight="0.19"
            android:gravity="top|left" />

        <TextView
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textColor="#faf7f7"
            android:textSize="25sp"
            android:id="@+id/textViewTelefone"
            android:gravity="left"
            android:layout_weight="0.31" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroTelefone"
            android:visibility="invisible"
            android:textColor="#FF0000"
            android:gravity="top|left" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:inputType= "number"
            android:ems="10"
            android:id="@+id/editTextIdade"
            android:background="#ffffff"
            android:textSize="20sp"
            android:gravity="left" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.56"></LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextTeleFone"
            android:background="#ffffff"
            android:textSize="20sp"
            android:gravity="left" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp">

        <TextView
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:id="@+id/textViewCpf"
            android:textColor="#faf7f7"
            android:textSize="25sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroCPF"
            android:visibility="invisible"
            android:textColor="#FF0000"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextCpf"
            android:background="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:gravity="left">

        <TextView
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/rg"
            android:id="@+id/textViewRG"
            android:textColor="#faf7f7"
            android:textSize="25sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroRG"
            android:visibility="invisible"
            android:textColor="#FF0000"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextRg"
            android:background="#ffffff"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:id="@+id/textViewSexo"
            android:textColor="#faf7f7"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/SpinneSexo"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            android:background="#ffffff"
            android:textSize="20sp"/>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/estadoCivil"
            android:id="@+id/textViewEstadoCivil"
            android:textColor="#faf7f7"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/SpinneEstadoCivil"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            android:background="#ffffff"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:id="@+id/button"
            android:layout_gravity="right"
            android:onClick="enviar"
            android:gravity="center" />
    </LinearLayout>


</LinearLayout>

