<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FF222B7C" >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp">

        <TextView
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:id="@+id/textViewNome"
            android:textColor="#faf7f7"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroNome"
            android:visibility="invisible"
            android:textColor="#FF0000"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/respostaNome"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idade"
            android:textColor="#faf7f7"
            android:textSize="25sp"
            android:id="@+id/textViewIdade"
            android:layout_weight="0.21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroIdade"
            android:visibility="invisible"
            android:textColor="#FF0000"
            android:layout_weight="0.19"
            android:gravity="top|left" />

        <TextView
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textColor="#faf7f7"
            android:textSize="25sp"
            android:id="@+id/textViewTelefone"
            android:gravity="left"
            android:layout_weight="0.31" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroTelefone"
            android:visibility="invisible"
            android:textColor="#FF0000"
            android:gravity="top|left" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#FF222B7C">
        <TextView
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/respostaIdade"
            android:textSize="20sp"
            android:background="#FFFF"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="100dp"
            android:layout_height="match_parent"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/respostaTelefone"
            android:textSize="20sp"
            android:background="#FFFF" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp">

        <TextView
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:id="@+id/textViewCpf"
            android:textColor="#faf7f7"
            android:textSize="25sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroCPF"
            android:visibility="invisible"
            android:textColor="#FF0000"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/respostaCpf"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:gravity="left">

        <TextView
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/rg"
            android:id="@+id/textViewRG"
            android:textColor="#faf7f7"
            android:textSize="25sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalido"
            android:id="@+id/erroRG"
            android:visibility="invisible"
            android:textColor="#FF0000"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/respostaRG"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:id="@+id/textViewSexo"
            android:textColor="#faf7f7"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/respostaSexo"
            android:textSize="20sp" />
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="34dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/estadoCivil"
            android:id="@+id/textViewEstadoCivil"
            android:textColor="#faf7f7"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/respostaEstadoCivil"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>

